--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="az">
 <head>
-    <link rel="stylesheet" href="assets/css/fonts.css" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,8 +29,10 @@
     <meta property="og:description" content="D-TECH" />
 
 
-    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/fonts.min.css" />
     <link rel="stylesheet" href="assets/css/main.min.css" />
+    <link rel="stylesheet" href="assets/css/glitch.min.css" />
 </head>
 <body>
 
@@ -54,18 +55,22 @@
     </div>
     <div class="container-fluid">
         <div class="section_navbar_container">
-            <a href="/" class="section_navbar_container_link" aria-label="dtech logo">
-                <i class="dtech-icons dtech-logo"></i>
+            <a href="/" class="section_navbar_container_link glitch glitchOutHover glitchIcon glitch-logo animationDelay-4">
+                <i class="dtech-icons dtech-logo" ></i>
             </a>
             <div class="section_navbar_container_menu">
                 <div class="section_navbar_container_menu_item active">
-                    <a href="/" class="section_navbar_container_menu_item--link"  aria-label="menu name">
-                        ABOUT COMPANY
+                    <a href="/" class="section_navbar_container_menu_item--link"  aria-label="ABOUT COMPANY">
+                        <h6 class="glitch glitchOutHover"  aria-label="ABOUT COMPANY">
+                            ABOUT COMPANY
+                        </h6>
                     </a>
                 </div>
                 <div class="section_navbar_container_menu_item">
-                    <a href="services" class="section_navbar_container_menu_item--link"  aria-label="menu name">
-                        OUR SERVICES
+                    <a href="services" class="section_navbar_container_menu_item--link"  aria-label="OUR SERVICES">
+                        <h6 class="glitch glitchOutHover"  aria-label="OUR SERVICES">
+                            OUR SERVICES
+                        </h6>
                     </a>
                 </div>
             </div>
@@ -147,24 +152,24 @@
 
 <section class="sidebar">
     <div class="sidebar_lang">
-        <a href="#" class="sidebar_lang_item"  aria-label="lang name">
+        <a href="#" class="sidebar_lang_item glitch glitchOutHover"  aria-label="RU">
             RU
         </a>
-        <a href="#" class="sidebar_lang_item active"  aria-label="lang name">
+        <a href="#" class="sidebar_lang_item active glitch glitchOutHover"  aria-label="En">
             EN
         </a>
     </div>
     <div class="sidebar_social">
-        <a href="#" class="sidebar_social_item" aria-label="social menu name">
+        <a href="#" class="sidebar_social_item glitch glitchOutHover glitchIcon glitch-instagram" aria-label="social menu name">
             <i class="dtech-icons dtech-instagram"></i>
         </a>
-        <a href="#" class="sidebar_social_item" aria-label="social menu name">
+        <a href="#" class="sidebar_social_item glitch glitchOutHover glitchIcon glitch-fb" aria-label="social menu name">
             <i class="dtech-icons dtech-fb"></i>
         </a>
-        <a href="#" class="sidebar_social_item" aria-label="social menu name">
+        <a href="#" class="sidebar_social_item glitch glitchOutHover glitchIcon glitch-linkedin" aria-label="social menu name">
             <i class="dtech-icons dtech-linkedin"></i>
         </a>
-        <a href="#" class="sidebar_social_item" aria-label="social menu name">
+        <a href="#" class="sidebar_social_item glitch glitchOutHover glitchIcon glitch-twitter" aria-label="social menu name">
             <i class="dtech-icons dtech-twitter"></i>
         </a>
     </div>
@@ -179,29 +184,36 @@
                     <div class="containerBreak-row-img section_header_img">
                         <div class="box pt-56">
                             <div class="box-resize">
-                                <img src="assets/images/header_img.png" class="w-100" alt="Banner Image" />
+<!--                                <img src="assets/images/header_img.png" class="w-100" alt="Banner Image" />-->
+                                <div class="glitch-img">
+                                    <div class="glitch__img" style="background-image: url('assets/images/header_img.png')"></div>
+                                    <div class="glitch__img" style="background-image: url('assets/images/header_img.png')"></div>
+                                    <div class="glitch__img" style="background-image: url('assets/images/header_img.png')"></div>
+                                    <div class="glitch__img" style="background-image: url('assets/images/header_img.png')"></div>
+                                    <div class="glitch__img" style="background-image: url('assets/images/header_img.png')"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 pt-2 pb-2">
-                    <h1 class="section_header--header">
+                    <h1 class="section_header--header glitch glitchOutHover animationDelay-2" aria-label="Spectacular technologies">
                         Spectacular technologies
                     </h1>
-                    <p class="section_header--description">
+                    <p class="section_header--description glitch glitchOutHover animationDelay-0" aria-label="Stimmt is a digital agency for sleek technology and kick-ass design">
                         Stimmt is a digital agency for sleek technology and kick-ass design
                     </p>
                     <a href="#" class="customBtn" aria-label="about our affairs">
-                        <span>about our affairs</span>
+                        <span class="glitch glitchOutHover" aria-label="about our affairs">about our affairs</span>
                     </a>
                 </div>
             </div>
         </div>
         <div class="scrollDown">
             <a href="#" class="scrollDown-link" aria-label="Scroll Down">
-                <span>Scroll</span>
+                <span class="glitch glitchOutHover animationDelay-2" aria-label="Scroll">Scroll</span>
                 <i class="dtech-icons dtech-scroll"></i>
-                <span>Down&nbsp;</span>
+                <span class="glitch glitchOutHover" aria-label="Down&nbsp;">Down&nbsp;</span>
             </a>
         </div>
     </div>
@@ -301,7 +313,7 @@
                 <div class="col-lg-6">
                     <div class="section_weFixIt_body_items">
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item" aria-label="Interaktiv texnologiyalar">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Interaktiv texnologiyalar">
                                 <span class="section_weFixIt_body_items_item--text">Interaktiv texnologiyalar</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -324,17 +336,17 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover"  aria-label="Interaktiv Vitrinlər">
                                 <span class="section_weFixIt_body_items_item--text">Interaktiv Vitrinlər</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover"  aria-label="Virtual promouter">
                                 <span class="section_weFixIt_body_items_item--text">Virtual promouter</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="proyeksiya ekranlari">
                                 <span class="section_weFixIt_body_items_item--text">proyeksiya ekranlari</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -357,7 +369,7 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="avtomatlaşdirilmiş idarəetmə sistemi">
                                 <span class="section_weFixIt_body_items_item--text">avtomatlaşdirilmiş idarəetmə sistemi</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -380,22 +392,22 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Web">
                                 <span class="section_weFixIt_body_items_item--text">Web</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="tətbiqi soft">
                                 <span class="section_weFixIt_body_items_item--text">tətbiqi soft</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="mikronontrollərin proqramlaşdırılması">
                                 <span class="section_weFixIt_body_items_item--text">mikronontrollərin proqramlaşdırılması</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover"aria-label="App">
                                 <span class="section_weFixIt_body_items_item--text">App</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -418,12 +430,12 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="crm">
                                 <span class="section_weFixIt_body_items_item--text">crm</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="kabel çəkmə">
                                 <span class="section_weFixIt_body_items_item--text">kabel çəkmə</span>
                             </a>
                         </div>
@@ -432,12 +444,12 @@
                 <div class="col-lg-6">
                     <div class="section_weFixIt_body_items">
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="bulud hesablaması">
                                 <span class="section_weFixIt_body_items_item--text">bulud hesablaması</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="müşahidə sistemləri">
                                 <span class="section_weFixIt_body_items_item--text">müşahidə sistemləri</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -460,12 +472,12 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Gps unıt sistemləri">
                                 <span class="section_weFixIt_body_items_item--text">Gps unıt sistemləri</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Mini ats və voip teledoniya sistemləri">
                                 <span class="section_weFixIt_body_items_item--text">Mini ats və voip teledoniya sistemləri</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -488,17 +500,17 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="hosting  və serverlərin qurulması">
                                 <span class="section_weFixIt_body_items_item--text">hosting  və serverlərin qurulması</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="domen kontrolleri">
                                 <span class="section_weFixIt_body_items_item--text">domen kontrolleri</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="E-mail server">
                                 <span class="section_weFixIt_body_items_item--text">E-mail server</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -521,12 +533,12 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Sənəd dövriyyəsi">
                                 <span class="section_weFixIt_body_items_item--text">Sənəd dövriyyəsi</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Ip - telefoniya">
                                 <span class="section_weFixIt_body_items_item--text">Ip - telefoniya</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -549,7 +561,7 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="serviceDetails" class="section_weFixIt_body_items_item"  aria-label="product name">
+                            <a href="serviceDetails" class="section_weFixIt_body_items_item glitch glitchOnHover" aria-label="Cağri mərkəzi">
                                 <span class="section_weFixIt_body_items_item--text">Cağri mərkəzi</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -670,7 +682,7 @@
 
 <script src="assets/vendor/jQuery/jquery-3.5.1.js"></script>
 <script src="assets/vendor/popper/popper.min.js"></script>
-<script src="assets/vendor/bootstrap/js/bootstrap.js"></script>
+<script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
 
 <script src="assets/js/main.min.js"></script>
 </body>
