--- a/ourServicesInner.html
+++ b/ourServicesInner.html
@@ -30,8 +30,10 @@
     <meta property="og:description" content="D-TECH" />
 
 
-    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/fonts.min.css" />
     <link rel="stylesheet" href="assets/css/main.min.css" />
+    <link rel="stylesheet" href="assets/css/glitch.min.css" />
 </head>
 <body class="themeWhite">
 
@@ -349,7 +351,7 @@
 
 <script src="assets/vendor/jQuery/jquery-3.5.1.js"></script>
 <script src="assets/vendor/popper/popper.min.js"></script>
-<script src="assets/vendor/bootstrap/js/bootstrap.js"></script>
+<script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
 
 <script src="assets/js/main.min.js"></script>
 </body>
