--- a/ourServices.html
+++ b/ourServices.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="az">
 <head>
-    <link rel="stylesheet" href="assets/css/fonts.css" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,8 +29,10 @@
     <meta property="og:description" content="D-TECH" />
 
 
-    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/fonts.min.css" />
     <link rel="stylesheet" href="assets/css/main.min.css" />
+    <link rel="stylesheet" href="assets/css/glitch.min.css" />
 </head>
 <body>
 
@@ -404,7 +405,7 @@
 
 <script src="assets/vendor/jQuery/jquery-3.5.1.js"></script>
 <script src="assets/vendor/popper/popper.min.js"></script>
-<script src="assets/vendor/bootstrap/js/bootstrap.js"></script>
+<script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
 
 <script src="assets/js/main.min.js"></script>
 </body>
