--- a/error.html
+++ b/error.html
@@ -55,8 +55,8 @@
     </div>
     <div class="container-fluid">
         <div class="section_navbar_container">
-            <a href="/" class="section_navbar_container_link" aria-label="dtech logo">
-                <i class="dtech-icons dtech-logo"></i>
+            <a href="/" class="section_navbar_container_link glitch glitchOutHover glitchIcon glitch-logo animationDelay-4">
+                <i class="dtech-icons dtech-logo" ></i>
             </a>
             <div class="section_navbar_container_menu">
                 <div class="section_navbar_container_menu_item active">
