--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
             <div class="section_navbar_container_menu">
                 <div class="section_navbar_container_menu_item active">
                     <a href="/" class="section_navbar_container_menu_item--link"  aria-label="ABOUT COMPANY">
-                        <h6 class="glitch glitchOutHover"  aria-label="ABOUT COMPANY">
+                        <h6 class=""  aria-label="ABOUT COMPANY">
                             ABOUT COMPANY
                         </h6>
                     </a>
                 </div>
                 <div class="section_navbar_container_menu_item">
                     <a href="services" class="section_navbar_container_menu_item--link"  aria-label="OUR SERVICES">
-                        <h6 class="glitch glitchOutHover"  aria-label="OUR SERVICES">
+                        <h6 class=""  aria-label="OUR SERVICES">
                             OUR SERVICES
                         </h6>
                     </a>
@@ -152,24 +152,24 @@
 
 <section class="sidebar">
     <div class="sidebar_lang">
-        <a href="#" class="sidebar_lang_item glitch glitchOutHover"  aria-label="RU">
+        <a href="#" class="sidebar_lang_item"  aria-label="RU">
             RU
         </a>
-        <a href="#" class="sidebar_lang_item active glitch glitchOutHover"  aria-label="En">
+        <a href="#" class="sidebar_lang_item active"  aria-label="En">
             EN
         </a>
     </div>
     <div class="sidebar_social">
-        <a href="#" class="sidebar_social_item glitch glitchOutHover glitchIcon glitch-instagram" aria-label="social menu name">
+        <a href="#" class="sidebar_social_item" aria-label="social menu name">
             <i class="dtech-icons dtech-instagram"></i>
         </a>
-        <a href="#" class="sidebar_social_item glitch glitchOutHover glitchIcon glitch-fb" aria-label="social menu name">
+        <a href="#" class="sidebar_social_item" aria-label="social menu name">
             <i class="dtech-icons dtech-fb"></i>
         </a>
-        <a href="#" class="sidebar_social_item glitch glitchOutHover glitchIcon glitch-linkedin" aria-label="social menu name">
+        <a href="#" class="sidebar_social_item" aria-label="social menu name">
             <i class="dtech-icons dtech-linkedin"></i>
         </a>
-        <a href="#" class="sidebar_social_item glitch glitchOutHover glitchIcon glitch-twitter" aria-label="social menu name">
+        <a href="#" class="sidebar_social_item" aria-label="social menu name">
             <i class="dtech-icons dtech-twitter"></i>
         </a>
     </div>
@@ -184,36 +184,29 @@
                     <div class="containerBreak-row-img section_header_img">
                         <div class="box pt-56">
                             <div class="box-resize">
-<!--                                <img src="assets/images/header_img.png" class="w-100" alt="Banner Image" />-->
-                                <div class="glitch-img">
-                                    <div class="glitch__img" style="background-image: url('assets/images/header_img.png')"></div>
-                                    <div class="glitch__img" style="background-image: url('assets/images/header_img.png')"></div>
-                                    <div class="glitch__img" style="background-image: url('assets/images/header_img.png')"></div>
-                                    <div class="glitch__img" style="background-image: url('assets/images/header_img.png')"></div>
-                                    <div class="glitch__img" style="background-image: url('assets/images/header_img.png')"></div>
-                                </div>
+                                <img src="assets/images/header_img.png" class="w-100" alt="Banner Image" />
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 pt-2 pb-2">
-                    <h1 class="section_header--header glitch glitchOutHover animationDelay-2" aria-label="Spectacular technologies">
+                    <h1 class="section_header--header" aria-label="Spectacular technologies">
                         Spectacular technologies
                     </h1>
-                    <p class="section_header--description glitch glitchOutHover animationDelay-0" aria-label="Stimmt is a digital agency for sleek technology and kick-ass design">
+                    <p class="section_header--description" aria-label="Stimmt is a digital agency for sleek technology and kick-ass design">
                         Stimmt is a digital agency for sleek technology and kick-ass design
                     </p>
                     <a href="#" class="customBtn" aria-label="about our affairs">
-                        <span class="glitch glitchOutHover" aria-label="about our affairs">about our affairs</span>
+                        <span class="" aria-label="about our affairs">about our affairs</span>
                     </a>
                 </div>
             </div>
         </div>
         <div class="scrollDown">
             <a href="#" class="scrollDown-link" aria-label="Scroll Down">
-                <span class="glitch glitchOutHover animationDelay-2" aria-label="Scroll">Scroll</span>
+                <span class="" aria-label="Scroll">Scroll</span>
                 <i class="dtech-icons dtech-scroll"></i>
-                <span class="glitch glitchOutHover" aria-label="Down&nbsp;">Down&nbsp;</span>
+                <span class="" aria-label="Down&nbsp;">Down&nbsp;</span>
             </a>
         </div>
     </div>
